@@ -57,6 +57,7 @@ The `register_snippet` function now accepts a `SnippetViewSet` class, allowing v
  * Add missing translated values to site settings' headers plus models presented in listings and audit report filtering labels (Stefan Hammer)
  * Remove `capitalize()` calls to avoid issues with other languages or incorrectly presented model names for reporting and parts of site settings (Stefan Hammer)
  * Add back rendering of `help_text` for InlinePanel (Matt Westcott)
+ * Ensure `for_user` argument is passed to the form class when previewing pages (Matt Westcott)
 
 ## Upgrade considerations
 
