@@ -1,0 +1,5 @@
+{% extends "tests/base.html" %}
+
+{% block content %}
+    <h2>foo = {{ page.foo }}</h2>
+{% endblock %}
